--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body {
   background-color: #1F2937;
 }
 
+#hero-section {
+  padding: 2rem 0;
+}
+
 /* class selectors sections */
 
 .nav-section {
@@ -68,8 +72,39 @@ body {
   border: none;
 }
 
+.projects-section-content {
+  text-align: center;
+}
+
+.project-heading {
+  color: #1F2937;
+  font-size: 36px;
+  font-weight: 900;
+}
+
+.project-lists {
+  display: flex;
+  justify-content: center;
+  gap: 1.5rem;
+  width: 100%;
+  height: 100%;
+}
+
+a {
+  width: 150px;
+  aspect-ratio: 1;
+}
+
+.project-link img {
+  max-width: 100%;
+  max-height: 100%;
+  /*padding: 3rem 1rem;*/
+  border: 4px solid #3882F6;
+  border-radius: 15px;
+}
+
 .copyright {
   color: #F9FAF8;
   text-align: center;
-  padding: 2rem;
+  padding: 2rem 0;
 }
