start working on testimonials sections

--- a/style.css
+++ b/style.css
@@ -15,6 +15,14 @@ body {
   padding: 2rem 0;
 }
 
+#projects-section {
+  padding : 2rem 0 4rem;
+}
+
+#testimonies {
+  background-color: #E5E7EB;
+}
+
 /* class selectors sections */
 
 .nav-section {
@@ -24,7 +32,7 @@ body {
   padding: 1rem;
 }
 .nav-header, .hero-content, .projects-section-content, .testimonies-content, .contact-me-content {
-  width: 800px;
+  width: 70%;
   margin: 0 auto;
 }
 .nav-link, .hero-subtitle {
@@ -39,11 +47,16 @@ body {
 
 .hero-content {
   display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
+
+
 .hero-image img {
-  width: 250px;
+  width: 300px;
   border-radius: 80% 25% 80% 25%;
+  margin-left: auto;
 }
 
 .hero-heading {
@@ -85,6 +98,7 @@ body {
 .project-lists {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 1.5rem;
   width: 100%;
   height: 100%;
@@ -98,9 +112,15 @@ a {
 .project-link img {
   max-width: 100%;
   max-height: 100%;
-  /*padding: 3rem 1rem;*/
+  padding: 3.5rem 1rem;
   border: 4px solid #3882F6;
   border-radius: 15px;
+}
+
+.clients-testimonies {
+  color: #1F2937;
+  font-size: 36px;
+  font-weight: 300;
 }
 
 .copyright {
