worked on contact section and project section
completed contact section design to match it design as good as possible, completed project section frames so worked as design intented with and without any images in them.

--- a/style.css
+++ b/style.css
@@ -128,17 +128,12 @@ a:active {
   height: 100%;
 }
 
-a {
-  width: 150px;
-  aspect-ratio: 1;
-}
 
 .project-link img {
-  max-width: 100%;
-  max-height: 100%;
-  padding: 3.5rem 1rem;
-  border: 4px solid #3882F6;
-  border-radius: 15px;
+  width: 100px;
+  height: 100px;
+  border: 2px solid #3882F6;
+  border-radius: 10px;
 }
 
 .clients-testimonies {
@@ -152,11 +147,12 @@ a {
   background-color: #3882F6;
   color: #F9FAF8;
   border-radius: 5px;
-  padding: 2rem;
+  padding: 2rem 4rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
   flex-wrap: wrap;
+  width: 65%;
 }
 
 
@@ -165,16 +161,16 @@ a {
 }
 
 .contact-heading {
-  flex-grow: 3;
+  flex-grow: 4;
 }
 
 .contact-me-content>.btn {
   border: 2px solid #F9FAF8;
   height: 45px;
   margin: auto;
-  flex-grow: 0.5;
-  flex-basis: 100px;
-  /* align-items: flex-end; */
+  flex-grow: 1;
+  flex-basis: 70px;
+  align-items: flex-end;
 }
 
 .copyright {
